--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script type="module" src="/js/get-posts.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
-    <!-- Navigation header -->
+    <!-- Navigation header (js/components/nav-bar.js) -->
     <header
       class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow"
     >
       <nav id="nav-bar">
-        <!-- js/components/nav-bar.js -->
+
       </nav>
     </header>
 
@@ -36,7 +36,7 @@
         </form>
       </section>
 
-      <!-- All posts section -->
+      <!-- All posts section (get-posts.js) -->
       <section class="lg:col-span-2">
           <div role="group" class="grid grid-cols-2">
             <button id="sortDesc" class="col-span-1 mx-4 mt-2 mb-4 pt-1 pb-2 rounded-md shadow-lg text-lg font-semibold text-cyan-300 bg-teal-900 hover:bg-cyan-800 target:bg-cyan-800">
@@ -51,12 +51,14 @@
           role="list"
           class="max-w-[640px] grid grid-cols-1 gap-y-4 md:min-w-[640px]"
         >
-          <!-- get-posts.js -->
         </ul>
+        <div role="none" class="py-4 lg:col-span-2 text-center">
+          <p data-input-general-message class="text-2xl text-orange-100"></p>
+        </div>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="w-full py-4 text-center bg-neutral-900">
+    <footer class="w-full py-8 text-center bg-neutral-900">
       <small class="text-orange-50"> &#169; 2022 frk.Sandkake </small>
     </footer>
   </body>
