--- a/login.html
+++ b/login.html
@@ -8,12 +8,12 @@
     <script type="module" src="/js/login.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
-    <!-- Navigation header -->
-    <header
+  <!-- Navigation header (js/components/nav-bar.js) -->
+  <header
       class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow"
     >
       <nav id="nav-bar">
-        <!-- js/components/nav-bar.js -->
+
       </nav>
     </header>
     <!-- LogIn -->
@@ -27,8 +27,8 @@
         role="none"
         class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover"
       >
+          <!-- LogIn form (validation and error message in login.js) -->
         <section class="my-8 py-8">
-          <!-- LogIn form -->
           <form
             id="loginForm"
             class="mx-auto px-4 bg-gray-800 bg-opacity-50 rounded-md sm:w-11/12 md:w-10/12 lg:w-9/12"
@@ -53,10 +53,7 @@
                 />
                 <div
                   class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
-                  data-input-error-message
-                >
-                  <!-- Message in login.js -->
-                </div>
+                  data-input-error-message></div>
               </div>
               <!-- Password -->
               <div
@@ -73,10 +70,7 @@
                 />
                 <div
                   class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
-                  data-input-error-message
-                >
-                  <!-- Message in login.js -->
-                </div>
+                  data-input-error-message></div>
               </div>
             </fieldset>
             <button
@@ -85,6 +79,9 @@
             >
               Log In
             </button>
+            <div role="none" class="py-4 lg:col-span-2 text-center">
+              <p data-input-general-message class="text-2xl text-orange-100"></p>
+            </div>
           </form>
         </section>
       </div>
