--- a/profile.html
+++ b/profile.html
@@ -9,12 +9,12 @@
     <script type="module" src="/js/get-delete-user-posts.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
-    <!-- Navigation header -->
-    <header
+  <!-- Navigation header (js/components/nav-bar.js) -->
+  <header
       class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow"
     >
       <nav id="nav-bar">
-        <!-- js/components/nav-bar.js -->
+
       </nav>
     </header>
 
@@ -79,15 +79,17 @@
           </form>
         </div>
       </section>
-      <!-- My posts section -->
+      <!-- My posts section (get-delete-user-posts.js) -->
       <section class="lg:col-span-1">
         <ul
           id="myPostItems"
           role="list"
           class="max-w-[500px] grid grid-cols-1 gap-y-4"
         >
-          <!-- get-delete-user-posts.js -->
         </ul>
+        <div role="none" class="py-4 lg:col-span-2 text-center">
+          <p data-input-general-message class="text-2xl text-orange-100"></p>
+        </div>
       </section>
     </main>
     <!-- Footer -->
