--- a/signup.html
+++ b/signup.html
@@ -8,12 +8,12 @@
     <script type="module" src="/js/signup.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
-    <!-- Navigation header -->
-    <header
+  <!-- Navigation header (js/components/nav-bar.js) -->
+  <header
       class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow"
     >
       <nav id="nav-bar">
-        <!-- js/components/nav-bar.js -->
+
       </nav>
     </header>
     <!-- SignUp -->
@@ -28,7 +28,7 @@
         role="none"
         class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover"
       >
-          <!-- SignUp form -->
+          <!-- SignUp form (validation and error message in login.js) -->
         <section class="my-8 py-8">
           <form
             id="signupForm"
@@ -56,9 +56,7 @@
                 <div
                   class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
                   data-input-error-message
-                >
-                  <!-- Message in signup.js -->
-                </div>
+                ></div>
               </div>
               <!-- EmailSignup -->
               <div
@@ -76,9 +74,7 @@
                 <div
                   class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
                   data-input-error-message
-                >
-                  <!-- Message in signup.js -->
-                </div>
+                ></div>
               </div>
               <!-- Password -->
               <div
@@ -96,9 +92,7 @@
                 <div
                   class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
                   data-input-error-message
-                >
-                  <!-- Message in signup.js -->
-                </div>
+                ></div>
               </div>
               <!-- ConfirmPassword -->
               <div
@@ -118,9 +112,7 @@
                 <div
                   class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
                   data-input-error-message
-                >
-                  <!-- Message in signup.js -->
-                </div>
+                ></div>
               </div>
             </fieldset>
             <button
@@ -129,6 +121,9 @@
             >
               Sign Up
             </button>
+            <div role="none" class="py-4 lg:col-span-2 text-center">
+              <p data-input-general-message class="text-2xl text-orange-100"></p>
+            </div>
           </form>
         </section>
       </div>
