--- a/single-post.html
+++ b/single-post.html
@@ -8,12 +8,12 @@
     <script type="module" src="/js/get-post-by-id.js" defer></script>
   </head>
   <body class="bg-gradient-to-br from-teal-500 to-fuchsia-600 w-full mx-auto">
-    <!-- Navigation header -->
+  <!-- Navigation header (js/components/nav-bar.js) -->
     <header
       class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow"
     >
       <nav id="nav-bar">
-        <!-- js/components/nav-bar.js -->
+
       </nav>
     </header>
 
@@ -21,9 +21,9 @@
       class="mx-auto my-8 py-8 grid grid-cols-1 gap-y-8 justify-items-center max-w-5xl"
     >
       <h1 class="my-4 text-2xl col-span-1">Post Details</h1>
-      <!-- Details post -->
+      <!-- Details post (get-post-by-id.js) -->
       <section id="postDetails" class="min-w-[300px] max-w-[640px] col-span-1 md:min-w-[640px]">
-        <!-- get-post-by-id.js -->
+
       </section>
     </main>
     <!-- Footer -->
