--- a/login.html
+++ b/login.html
@@ -1,92 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login to profile</title>
-    <script type="module" src="/js/index.js" defer></script>
-    <script type="module" src="/js/login.js" defer></script>
-  </head>
-  <body class="bg-gradient-to-br h-screen from-teal-500 to-fuchsia-600 w-full mx-auto">
-  <!-- Navigation header (js/components/nav-bar.js) -->
-  <header
-      class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow"
-    >
-      <nav id="nav-bar">
-
-      </nav>
-    </header>
-    <!-- LogIn -->
-    <main class="w-full mx-auto my-8 px-4 py-4 flex flex-col gap-8 justify-start items-center sm:w-11/12 md:w-10/12 lg:w-9/12">
-        <article>
-            <h1 class="my-4 text-2xl text-orange-50">Welcome back fellow Noroff socialites!</h1>
-        </article>
-      <div
-        role="none"
-        class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover"
-      >
-          <!-- LogIn form (validation and error message in login.js) -->
-        <section class="my-8 py-8">
-          <form
-            id="loginForm" aria-labelledby="loginForm"
-            class="mx-auto px-4 bg-gray-800 bg-opacity-50 rounded-md sm:w-11/12 md:w-10/12 lg:w-9/12"
-          >
-            <fieldset class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-              <legend class="text-2xl my-8 font-serif text-teal-400">
-                Enter your details
-              </legend>
-              <!-- EmailLogin -->
-              <div
-                role="group" aria-labelledby="emailLogin"
-                class="flex flex-col text-lg text-orange-50 font-mono"
-              >
-                <label for="emailLogin" class="sr-only">Email:</label>
-                <input
-                  id="emailLogin"
-                  class="p-2 rounded-md bg-neutral-900 placeholder-orange-50 focus:z-10 focus:outline-none focus:ring-indigo-500"
-                  type="text"
-                  name="emailLogin"
-                  placeholder="Your Noroff email"
-                  autofocus
-                />
-                <span role="alert" aria-label="error message"
-                  class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
-                  data-input-error-message aria-live="polite"></span>
-              </div>
-              <!-- Password -->
-              <div
-                role="group" aria-labelledby="password"
-                class="flex flex-col text-lg text-orange-50 font-mono"
-              >
-                <label for="password" class="sr-only">Password</label>
-                <input
-                  id="password"
-                  class="p-2 rounded-md bg-neutral-900 placeholder-orange-50 focus:z-10 focus:outline-none focus:ring-indigo-500 invalid:border-red-600"
-                  type="password"
-                  name="password"
-                  placeholder="Your password"
-                />
-                <span role="alert" aria-label="error message"
-                  class="error hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
-                  data-input-error-message aria-live="polite"></span>
-              </div>
-            </fieldset>
-            <button
-              type="submit"
-              class="pt-1 pb-2 my-8 rounded-md text-lg font-semibold text-teal-200 bg-indigo-700 border-b-2 border-orange-300 bg-opacity-80 hover:bg-opacity-100"
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Login to profile</title>
+        <script type="module" src="/js/index.js" defer></script>
+        <script type="module" src="/js/login.js" defer></script>
+    </head>
+    <body class="bg-gradient-to-br h-screen from-teal-500 to-fuchsia-600 w-full mx-auto">
+        <!-- Navigation header (js/components/nav-bar.js) -->
+        <header class="sticky top-0 z-30 p-3 bg-gradient-to-br from-teal-500 to-fuchsia-700 shadow">
+            <nav id="nav-bar"></nav>
+        </header>
+        <!-- LogIn -->
+        <main
+            class="w-full mx-auto my-8 px-4 py-4 flex flex-col gap-8 justify-start items-center sm:w-11/12 md:w-10/12 lg:w-9/12"
+        >
+            <article>
+                <h1 class="my-4 text-2xl text-orange-50">Welcome back fellow Noroff socialites!</h1>
+            </article>
+            <div
+                role="none"
+                class="w-full rounded shadow-md bg-[url('./uploads/vintage-tech.jpg')] bg-no-repeat bg-center bg-cover"
             >
-              Log In
-            </button>
-            <div role="alert" aria-label="general error message" class="py-4 lg:col-span-2 text-center">
-              <p data-input-general-message aria-live="polite" class="text-2xl text-orange-100"></p>
+                <!-- LogIn form (validation and error message in login.js) -->
+                <section class="my-8 py-8">
+                    <form
+                        id="loginForm"
+                        aria-labelledby="loginForm"
+                        class="mx-auto px-4 bg-gray-800 bg-opacity-50 rounded-md sm:w-11/12 md:w-10/12 lg:w-9/12"
+                    >
+                        <fieldset class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+                            <legend class="text-2xl my-8 font-serif text-teal-400">Enter your details</legend>
+                            <!-- EmailLogin -->
+                            <div
+                                role="group"
+                                aria-labelledby="emailLogin"
+                                class="flex flex-col text-lg text-orange-50 font-mono"
+                            >
+                                <label for="emailLogin" class="sr-only">Email:</label>
+                                <input
+                                    id="emailLogin"
+                                    class="p-2 rounded-md bg-neutral-900 placeholder-orange-50 focus:z-10 focus:outline-none focus:ring-indigo-500"
+                                    type="text"
+                                    name="emailLogin"
+                                    placeholder="Your Noroff email"
+                                    autofocus
+                                />
+                                <span
+                                    role="alert"
+                                    aria-label="error message"
+                                    class="hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
+                                    data-input-error-message
+                                    aria-live="polite"
+                                ></span>
+                            </div>
+                            <!-- Password -->
+                            <div
+                                role="group"
+                                aria-labelledby="password"
+                                class="flex flex-col text-lg text-orange-50 font-mono"
+                            >
+                                <label for="password" class="sr-only">Password</label>
+                                <input
+                                    id="password"
+                                    class="p-2 rounded-md bg-neutral-900 placeholder-orange-50 focus:z-10 focus:outline-none focus:ring-indigo-500 invalid:border-red-600"
+                                    type="password"
+                                    name="password"
+                                    placeholder="Your password"
+                                />
+                                <span
+                                    role="alert"
+                                    aria-label="error message"
+                                    class="error hidden p-2 bg-neutral-900 rounded-md text-sm text-center text-red-600"
+                                    data-input-error-message
+                                    aria-live="polite"
+                                ></span>
+                            </div>
+                        </fieldset>
+                        <button
+                            type="submit"
+                            class="pt-1 pb-2 my-8 rounded-md text-lg font-semibold text-teal-200 bg-indigo-700 border-b-2 border-orange-300 bg-opacity-80 hover:bg-opacity-100"
+                        >
+                            Log In
+                        </button>
+                        <div role="alert" aria-label="general error message" class="py-4 lg:col-span-2 text-center">
+                            <p data-input-general-message aria-live="polite" class="text-2xl text-orange-100"></p>
+                        </div>
+                    </form>
+                </section>
             </div>
-          </form>
-        </section>
-      </div>
-    </main>
-    <!-- Footer -->
-    <footer class="w-full fixed bottom-0 py-4 text-center bg-neutral-900">
-      <small class="text-orange-50"> &#169; 2022 frk.Sandkake </small>
-    </footer>
-  </body>
+        </main>
+        <!-- Footer -->
+        <footer class="w-full fixed bottom-0 py-4 text-center bg-neutral-900">
+            <small class="text-orange-50"> &#169; 2022 frk.Sandkake </small>
+        </footer>
+    </body>
 </html>
